# nixpkgs-config

./: default.nix  drvs_to_build.py  flake.nix
.github/workflows/: build.yml
niz/: Cargo.toml  _niz  package.nix
niz/scripts/: build-plan.py  flake-tree.py  pr-checker.sh
niz/src/: flake_tree.rs  main.rs  utils.rs
overlays/: 13284-allow-user-registry-for-flake-override-input.patch  mods.nix  utils.nix
overlays/__unused/: hm.nix
patches/: 406866-home-manager.patch  407555-geminicommit.patch  408398-geminicommit.patch  411761-geminicommit.patch  413542-home-manager.patch  415239-gmc.patch  416557-home-manager.patch  419137-home-manager.patch  421919-home-manager.patch  424636-home-manager.patch  429197-home-manager.patch  431309-djview.patch  431611-home-manager.patch  432615-geminicommit.patch  434082-home-manager.patch  436429-home-manager.patch  437213-tectonic.patch  437306-lsprotocol.patch  437517-git-branchless.patch  439891-home-manager.patch  439893-zed.patch  453495-home-manager.patch  455455-wayland.patch  455458-qtbase.patch  455489-home-manager.patch  458425-home-manager.patch  460538-home-manager.patch  462683-home-manager.patch  465864-home-manager.patch  466603-home-manager.patch  472695-home-manager.patch  476080-hm.patch  484603-hm.patch  494113-home-manager.patch  502268-home-manager.patch  default.nix  direnv-no-fish.patch  djview.patch  home-manager.patch  jj-unstable.patch  (+1 more)
pkgs/: nixpkgs-pr-checker.nix  open-webui-cli.nix
pkgs/nixpkgs-helpers/scripts/: pkgs-lib.nix
