[package]
name = "niz"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.57"
duct = "1.1.0"
flexi_logger = "0.31.2"
log = "0.4.28"
yansi = { version = "1.0.1", features = ["detect-env", "detect-tty", "hyperlink"] }
